Automating AQI ETL Pipeline

--- a/.github/workflows/AQI-ETL.yaml
+++ b/.github/workflows/AQI-ETL.yaml
@@ -26,6 +26,7 @@ jobs:
 
       - name: Run ETL
         env:
+          WAQI_API_KEY:${{secret.WAQI_API_KEY}}
           HOPSWORKS_API_KEY: ${{ secrets.HOPSWORKS_API_KEY }}
         run: |
           python etl.py
