--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-pandas==2.1.4
-requests==2.32.3
-pyarrow==14.0.2
-hopsworks==4.2.*
-hsfs==3.7.9
+pandas==2.3.3
+requests==2.32.5
+hopsworks==4.6.0
+pyarrow==18.1.0
+hopsworks[python]
